@@ -3,6 +3,7 @@
  - fix: `get_datasets_user_shared` failed when many circles/collections exist
  - enh: allow to disable update check on startup via settings
  - enh: apply button in upload settings only affects cache location
+ - enh: move "apply" button in downloads settings next to "browse" button
  - ref: decorate PyQtSlots
  - tests: restore previous users settings after testing
 0.17.3
